--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   "dependencies": {
     "commander": "^9.4.1",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.7",
+    "jest": "^29.3.1",
+    "jest-cli": "^29.3.1"
   }
 }
