gh actions test

--- a/.github/workflows/gh-actions-test.yml
+++ b/.github/workflows/gh-actions-test.yml
@@ -1,6 +1,6 @@
 
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: gendiff test workflow
 on: [push]
 jobs:
   Explore-GitHub-Actions:
