--- a/__fixtures__/tree1.yml
+++ b/__fixtures__/tree1.yml
@@ -1,6 +1,19 @@
-hello: world
-null: null
-is: true
-nested:
-  count: 5
-arr: [1, hola, true]
+common:
+  setting1: Value 1
+  setting2: 200
+  setting3: true
+  setting6:
+    key: value
+    doge:
+      wow:
+
+group1:
+  baz: bas
+  foo: bar
+  nest:
+    key: value
+
+group2:
+  abc: 12345
+  deep:
+    id: 45
