--- a/__fixtures__/tree2.yml
+++ b/__fixtures__/tree2.yml
@@ -1,8 +1,21 @@
-hello: World!
-is: true
-nested:
-  count: 5
-  units: meters
-arr: [1, hola, true]
-peepo: happy
-12: null
+common:
+  follow: false
+  setting1: Value 1
+  setting3: null
+  setting4: blah blah
+  setting5:
+    key5: value5
+  setting6:
+    key: value
+    ops: vops
+    doge:
+      wow: so much
+group1:
+  foo: bar
+  baz: bars
+  nest: str
+group3:
+  deep:
+    id:
+      number: 45
+  fee: 100500
