--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,12 +6,11 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules:
-  {
+rules: {
     'no-console': 'off',
     'import/extensions': 0,
     'linebreak-style': 0,
     'operator-linebreak': 0,
     'implicit-arrow-linebreak': 'off',
-    'comma-dangle': ['error', { 'functions': 'never' }],
+    # 'comma-dangle': ['error', { 'functions': 'never' }],
   }
