--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/sirflyingv/frontend-project-46#readme",
   "dependencies": {
     "commander": "^9.4.1",
+    "fsp": "^0.1.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
